Version 4.0 Major Release